[project]
name = "app"
version = "0.1.0"
description = ""
authors = [ { name = "Marcus Schiesser", email = "mail@marcusschiesser.de" } ]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.109.1",
    "python-dotenv>=1.0.0",
    "pydantic<2.10",
    "llama-index>=0.12.1",
    "cachetools>=5.3.3",
    "reflex>=0.6.2.post1",
]

[project.scripts]
generate = "app.engine.generate:generate_datasource"

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "docx2txt>=0.8",
    "llama-index-llms-openai>=0.3.2",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-agent-openai>=0.4.0",
]

[build-system]
requires = [ "hatchling>=1.24" ]
build-backend = "hatchling.build"